Completed The Web App and made edits to the jupyter notebooks

--- a/Notebooks/data.ipynb
+++ b/Notebooks/data.ipynb
@@ -5,7 +5,7 @@
    "id": "16f16e79",
    "metadata": {},
    "source": [
-    "**Day 1 Fetch Stock Data** "
+    "**Notebook 1 Fetch Stock Data** "
    ]
   },
   {
@@ -58,6 +58,8 @@
     }
    ],
    "source": [
+    "# Downloading data for the tickers from Yahoo Finance\n",
+    "# The date range is from 2020-06-03 to 2025-06-04\n",
     "tickers = [\"RELIANCE.NS\",\"ICICIBANK.NS\",\"HDFCBANK.NS\",\"TCS.NS\",\"INFY.NS\"]\n",
     "\n",
     "dataOfTickers = yf.download(tickers = tickers,start=\"2020-06-03\",end=\"2025-06-04\")\n",
@@ -76,6 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Saving the Close prices and raw data to CSV files in the Data folder\n",
     "import os\n",
     "\n",
     "# Ensure the directory exists\n",
